--- a/locality-specific-policy/config-root/cluster/clusterrolebinding.auditors.yaml
+++ b/locality-specific-policy/config-root/cluster/clusterrolebinding.auditors.yaml
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: auditors
   annotations:
-    configmanagement.gke.io/cluster-selector: us-central-1c
+    configmanagement.gke.io/cluster-selector: selector-central-or-east
 subjects:
 - kind: User
   name: auditor@foo-corp.com
