--- a/locality-specific-policy/config-root/cluster/clusterrole.auditor.yaml
+++ b/locality-specific-policy/config-root/cluster/clusterrole.auditor.yaml
@@ -2,9 +2,9 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: auditor
+  name: commerce-user
   annotations:
-    configmanagement.gke.io/cluster-selector: select-location-belgium
+    configmanagement.gke.io/cluster-selector: selector-central-or-east
 rules:
 - apiGroups: [""] # core API group
   resources: ["namespaces"]
