--- a/locality-specific-policy/config-root/cluster/clusterrolebinding.auditors.yaml
+++ b/locality-specific-policy/config-root/cluster/clusterrolebinding.auditors.yaml
@@ -2,14 +2,14 @@
 kind: ClusterRoleBinding 
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: auditors
+  name: commerce-auditors
   annotations:
     configmanagement.gke.io/cluster-selector: selector-central-or-east
 subjects:
 - kind: User
-  name: auditor@foo-corp.com
+  name: auditor@test.com
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
-  name: auditor
+  name: commerce-user
   apiGroup: rbac.authorization.k8s.io
