--- a/locality-specific-policy/config-root/cluster/clusterrole.auditor.yaml
+++ b/locality-specific-policy/config-root/cluster/clusterrole.auditor.yaml
@@ -2,7 +2,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: commerce-user
+  name: commerce-user1
   annotations:
     configmanagement.gke.io/cluster-selector: selector-central-or-east
 rules:
